Optimized a directory traversal.